Remove --illegal-access=permit in surefire tests.