@@ -55,7 +55,8 @@
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <!-- <argLine>-Dchronicle.values.dumpCode=true ... -->
-                    <argLine>--illegal-access=permit --add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
+<!--                    <argLine>&#45;&#45;illegal-access=permit &#45;&#45;add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine> -->
+                    <argLine>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
